# poetry-lambda

./: .envrc.template  .gitignore  README.md  pyproject.toml
.github/workflows/: cd.yml
src/poetry_lambda/: app.py  config.py  error_handler.py  lambda_function.py  log_config.py
src/poetry_lambda/model/: name.py  person.py
src/poetry_lambda/repos/: factory.py  name_repo.py  person_repo.py
src/poetry_lambda/services/: __init__.py  name_services.py  person_services.py
src/poetry_lambda/views/: hello.py
tests/: conftest.py  docker-compose.yml
tests/integration/: conftest.py  test_app_running_as_lambda.py  test_flask_app.py  test_install_app.py
tests/integration/in_process/: test_hello_endpoint.py
tests/integration/lambda/: test_app_running_as_lambda.py
tests/unit/: conftest.py  test_app.py  test_name_service.py
tests/unit/services/: test_name_services.py
tests/unit/views/: test_hello.py
tests/utils/: builders.py
